src/main/default/objects/Sync_Assignment__c/Sync_Assignment__c.object-meta.xml
<CustomObject>
    <description>User's syncable Jobs</description>
    <label>Sync Assignment</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Sync Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sync Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>