src/main/default/objects/Sync_Assignment__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <inlineHelpText>User granted access through the sync assignment.</inlineHelpText>
    <label>User</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Job Sync Assignments</relationshipLabel>
    <relationshipName>Sync_Assignment_Contact</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>