src/main/default/objects/Sync_Assignment__c/fields/Job__c.field-meta.xml
<CustomField>
    <fullName>Job__c</fullName>
    <inlineHelpText>Job to which the user is granted access in FieldFX Mobile through the sync assignment.</inlineHelpText>
    <label>Job</label>
    <referenceTo>Job__c</referenceTo>
    <relationshipLabel>User Sync Assignments</relationshipLabel>
    <relationshipName>Sync_Assignment_Job</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>