src/main/default/objects/Sync_Assignment__c/fields/Sync_Assignment_ID__c.field-meta.xml
<CustomField>
    <fullName>Sync_Assignment_ID__c</fullName>
    <inlineHelpText>Unique identifier for the sync assignment.</inlineHelpText>
    <label>Sync Assignment ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>